fixing regression with checkbox selection caused by previous IE10, IE11 visibility hack
git-svn-id: https://svn.otpartners.com/svn/Poses/trunk@2349 7f4e098a-8ec1-c442-913e-02cc3c41ae5c

--- a/UnderstoodDotOrg.Web/Presentation/Includes/css.source/globals.scss
+++ b/UnderstoodDotOrg.Web/Presentation/Includes/css.source/globals.scss
@@ -105,14 +105,6 @@
     color: white;
   }
 }
-.checker input {
-  /* Workaround for IE10 & IE11 default input styling */
-  visibility: hidden;
-
-  @include old-ie {
-    visibility: visible;
-  }
-}
 
 // Purple "your parent toolkit" buttons.
 .button.purple {
